--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,20 @@
 header{
-    background-color: blueviolet;
+    background-color: rgb(88, 0, 88);
     text-align: center;
     padding: 16px;
-    border-radius: 16px;
-
+    border-radius: 16px;        
 }
 
 body{
-    color: rgb(120, 16, 240);
-    background-image: linear-gradient (to left, rgb(14, 189, 72), rgb(4, 3, 8));
+    color: rgb(122, 223, 21);
+    background-image: linear-gradient(to left, rgb(85, 3, 85), black);
     text-align: justify;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 16px;
-
+    font-size: 24px;
 }
 
-fotter{
+
+footer{
     text-align: center;
+
 }
