--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 header{
-    background-color: rgb(88, 0, 88);
+    background-color: rgb(50, 240, 2);
     text-align: center;
     padding: 16px;
     border-radius: 16px;        
@@ -7,7 +7,7 @@ header{
 
 body{
     color: rgb(122, 223, 21);
-    background-image: linear-gradient(to left, rgb(85, 3, 85), black);
+    background-image: linear-gradient(to left, rgb(0, 0, 0), rgb(59, 155, 47));
     text-align: justify;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 24px;
